updated: linh tinh

--- a/admin/index.html
+++ b/admin/index.html
@@ -23,7 +23,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>AdminLTE 3</title>
-    <script
+    <!-- <script
       data-name="BMC-Widget"
       data-cfasync="false"
       src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js"
@@ -34,7 +34,7 @@
       data-position="Right"
       data-x_margin="18"
       data-y_margin="72"
-    ></script>
+    ></script> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
